Added o popup window for workouts (calendar page)

--- a/psk_fitness/psk_fitness/psk_fitness.csproj
+++ b/psk_fitness/psk_fitness/psk_fitness.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="2.1.0" />
     <ProjectReference Include="..\psk_fitness.Client\psk_fitness.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.3" />
