migrated to sqlite

--- a/psk_fitness/psk_fitness/appsettings.json
+++ b/psk_fitness/psk_fitness/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-psk_fitness-15b8cc8f-eea3-44fc-9191-3fc691a610a8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=mydatabase.db"
   },
   "Logging": {
     "LogLevel": {
