--- a/psk_fitness/psk_fitness/psk_fitness.csproj
+++ b/psk_fitness/psk_fitness/psk_fitness.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.11.1" />
     <PackageReference Include="Blazor.Bootstrap" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
     <ProjectReference Include="..\psk_fitness.Client\psk_fitness.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
