semi-working addFriend API

--- a/psk_fitness/psk_fitness/psk_fitness.csproj
+++ b/psk_fitness/psk_fitness/psk_fitness.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.11.1" />
     <PackageReference Include="Blazor.Bootstrap" Version="2.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <ProjectReference Include="..\psk_fitness.Client\psk_fitness.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
@@ -19,6 +21,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\DTOs\" />
   </ItemGroup>
 
 </Project>
