--- a/psk_fitness/psk_fitness.Client/psk_fitness.Client.csproj
+++ b/psk_fitness/psk_fitness.Client/psk_fitness.Client.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="BootstrapBlazor" Version="8.4.1" />
+    <PackageReference Include="Microsoft.AspNet.Cors" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.3" />
   </ItemGroup>
