--- a/psk_fitness/psk_fitness.Client/psk_fitness.Client.csproj
+++ b/psk_fitness/psk_fitness.Client/psk_fitness.Client.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNet.Cors" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
