--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /psk_fitness/psk_fitness/mydatabase.db
+/psk_fitness/psk_fitness/Migrations/20240524110910_exerciseMigrations.cs
+/psk_fitness/psk_fitness/Migrations/20240524110910_exerciseMigrations.Designer.cs
