--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,8 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /psk_fitness/psk_fitness/mydatabase.db
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/psk_fitness.iml
+/.idea/vcs.xml
