Added logging middleware

--- a/psk_fitness/psk_fitness/appsettings.json
+++ b/psk_fitness/psk_fitness/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=mydatabase.db"
   },
+  "LoggingSettings": {
+    "EnableLogging": true,
+    "LogPath": "logs/log.log"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
