--- a/psk_fitness/psk_fitness/appsettings.Development.json
+++ b/psk_fitness/psk_fitness/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "LoggingSettings": {
+    "EnableLogging": true,
+    "LogPath": "logs/log.log"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
