Added an ability to add exercises from UI (for now just predefined exercises, not from the database)

--- a/psk_fitness/psk_fitness.Client/psk_fitness.Client.csproj
+++ b/psk_fitness/psk_fitness.Client/psk_fitness.Client.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <None Remove="Pages\Calendar.razor.css" />
+    <None Remove="Shared\Dropdown.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Shared\Dropdown.razor.css" />
   </ItemGroup>
 
   <ItemGroup>
