Ignore IDE differences

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /psk_fitness/psk_fitness/mydatabase.db
 /psk_fitness/psk_fitness/Migrations/20240524110910_exerciseMigrations.cs
 /psk_fitness/psk_fitness/Migrations/20240524110910_exerciseMigrations.Designer.cs
+/.idea
