Appsettings change to disable logging works now

--- a/psk_fitness/psk_fitness/appsettings.Development.json
+++ b/psk_fitness/psk_fitness/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "LoggingSettings": {
-    "EnableLogging": true,
-    "LogPath": "logs/log.log"
+    "LoggingEnabled": true,
+    "LogPath": "Logs/log.log"
   },
   "Logging": {
     "LogLevel": {
