--- a/psk_fitness/psk_fitness/appsettings.json
+++ b/psk_fitness/psk_fitness/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Data Source=mydatabase.db"
   },
   "LoggingSettings": {
-    "EnableLogging": true,
-    "LogPath": "logs/log.log"
+    "LoggingEnabled": true,
+    "LogPath": "Logs/log.log"
   },
   "Logging": {
     "LogLevel": {
